<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/enter_name"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="30dp"/>

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="114dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="00:00"
        android:textSize="35dp" />

    <Button
        android:id="@+id/btnPickTime"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="timePicker"
        android:text="@string/time"
        android:layout_marginBottom="30dp"/>

    <EditText
        android:id="@+id/etInterval"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="enter time interval (in hours)"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="30dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:onClick="setTimer"
        android:text="@string/OK"
        android:layout_marginBottom="30dp"/>


    <TextView
        android:id="@+id/fading_text_view"
        android:layout_width="match_parent"
        android:text="@string/done"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:textSize="30sp" />
</LinearLayout>